--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1>Amoba by Fabritz</h1>
+    <h1>Amőba by Fábritz</h1>
     <h2>Player: <span id="player"></span></h2>
     <div class="canvas-container">
         <canvas id="canvas" width="800" height="800"></canvas>
