--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
             <h1 class="title">Amőba by Fábritz</h1>
             <h2><span id="header-text">Player: </span><span id="player"></span></h2>
         </div>
-        <div class="canvas-container">
-            <canvas id="canvas" width="520" height="520"></canvas>
+        <div class="game-container">
+            <div class="canvas-container">
+                <canvas id="canvas" width="520" height="520"></canvas>
+            </div>
+            <div class="button-container">
+                <button id="new-game" onclick="resetGame()">New Game</button>
+                <button id="randomize-colors" onclick="randomizeColors()">Randomize Colors</button>
+            </div>
         </div>
-        <div class="button-container">
-            <button id="new-game" onclick="resetGame()">New Game</button>
-            <button id="randomize-colors" onclick="randomizeColors()">Randomize Colors</button>
-        </div>
+
     </div>
 
     <script src="amoba.js"></script>
